--- a/insert-remapper/index.html
+++ b/insert-remapper/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Index</h1>
-    <script src="Artifacts/Banner0-edited.js"></script>
+    <script src="Artifacts/Banner10.js"></script>
 </body>
 </html>
