--- a/insert-remapper/tests/index.html
+++ b/insert-remapper/tests/index.html
@@ -7,7 +7,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-    <script src="../index.js"></script>
-    <script src="index-tests.js"></script>
+    <script src="../dist/index.js"></script>
+    <script src="../dist/tests/index-tests.js"></script>
 </body>
 </html>
