--- a/insert-remapper/tests/index.html
+++ b/insert-remapper/tests/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <link href="../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" />
 </head>
 <body>
     <div id="qunit"></div>
